Use tcpSocket probes instead of httpGet

--- a/charts/sharingio-pair/templates/deployment-cluster-api-manager.yaml
+++ b/charts/sharingio-pair/templates/deployment-cluster-api-manager.yaml
@@ -55,12 +55,10 @@ spec:
               containerPort: {{ .Values.clusterapimanager.service.port }}
               protocol: TCP
           livenessProbe:
-            httpGet:
-              path: /
+            tcpSocket:
               port: http
           readinessProbe:
-            httpGet:
-              path: /
+            tcpSocket:
               port: http
           resources:
             {{- toYaml .Values.clusterapimanager.resources | nindent 12 }}
