Add versioning to cluster-api-manager binary and container

--- a/apps/cluster-api-manager/Dockerfile
+++ b/apps/cluster-api-manager/Dockerfile
@@ -3,10 +3,18 @@ WORKDIR /app
 COPY . /app/
 COPY go.* /app/
 ARG GOARCH=""
+ARG AppBuildVersion="0.0.0"
+ARG AppBuildHash="???"
+ARG AppBuildDate="???"
+ARG AppBuildMode="development"
 RUN CGO_ENABLED=0 GOOS=linux GOARCH="$GOARCH" go build \
   -a \
   -installsuffix cgo \
-  -ldflags "-extldflags '-static' -s -w" \
+  -ldflags "-extldflags '-static' -s -w \
+    -X github.com/sharingio/pair/common.AppBuildVersion=$AppBuildVersion \
+    -X github.com/sharingio/pair/common.AppBuildHash=$AppBuildHash \
+    -X github.com/sharingio/pair/common.AppBuildDate=$AppBuildDate \
+    -X github.com/sharingio/pair/common.AppBuildMode=$AppBuildMode" \
   -o cluster-api-manager \
   main.go
 
