Add cert-manager configurations for Ingress in chart

--- a/charts/sharingio-pair/templates/ingress.yaml
+++ b/charts/sharingio-pair/templates/ingress.yaml
@@ -13,6 +13,9 @@ metadata:
     {{- include "sharingio-pair.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
+    {{- if .Values.ingress.certmanager.enabled }}
+    cert-manager.io/cluster-issuer: {{ include "sharingio-pair.fullname" . }}-letsencrypt
+    {{- end }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
