--- a/charts/sharingio-pair/values.yaml
+++ b/charts/sharingio-pair/values.yaml
@@ -21,12 +21,12 @@ imagePullSecrets: []
 
 ingress:
   enabled: false
+  certmanager:
+    enabled: false
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    # TODO set CANONICAL_URL based off of this
-    # TODO set subdomain based off of this
     - host: chart-example.local
       paths: []
   tls: []
