--- a/charts/sharingio-pair/templates/cluster-issuer.yaml
+++ b/charts/sharingio-pair/templates/cluster-issuer.yaml
@@ -4,6 +4,9 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: {{ include "sharingio-pair.fullname" . }}-letsencrypt
+  labels:
+    app.kubernetes.io/part-of: sharingio-pair
+    {{- include "sharingio-pair.labels" . | nindent 4 }}
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
