update gitignore for when client in subdirectory

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
 pom.xml
 *jar
-/classes/
-/.lein-deps-sum
-/.lein-failures
-/.lein-env
-/checkouts
-/.env
-/target
-/profiles.clj
-/logs
-/.lein-repl-history
-/pg
-/.nrepl-port
-sharingio-*.yaml
+**/classes/
+**/.lein-deps-sum
+**/.lein-failures
+**/.lein-env
+**/checkouts
+**/.env
+**/target
+**/profiles.clj
+**/logs
+**/.lein-repl-history
+**/pg
+**/.nrepl-port
+**/.nrepl-port
+**/.lein-repl-history
+**/target/*
+**/sharingio-*.yaml
