--- a/charts/sharingio-pair/templates/deployment-cluster-api-manager.yaml
+++ b/charts/sharingio-pair/templates/deployment-cluster-api-manager.yaml
@@ -51,6 +51,8 @@ spec:
               value: {{ printf ":%v" .Values.clusterapimanager.service.port | toString | quote | default "8080" }}
             - name: APP_TARGET_NAMESPACE
               value: {{ .Values.targetNamespace | default .Release.Namespace }}
+            - name: TZ
+              value: {{ .Values.timezone }}
             {{- if .Values.clusterapimanager.extraEnv }}
             {{- toYaml .Values.clusterapimanager.extraEnv | nindent 12 }}
             {{- end }}
