--- a/charts/sharingio-pair/values.yaml
+++ b/charts/sharingio-pair/values.yaml
@@ -15,6 +15,10 @@ githubOAuth:
 equinixMetal:
   projectID: ""
 
+aws:
+  accessKeyID: ""
+  secretAccessKey: ""
+
 targetNamespace: ""
 
 timezone: Pacific/Auckland
