--- a/charts/sharingio-pair/templates/secret.yaml
+++ b/charts/sharingio-pair/templates/secret.yaml
@@ -22,3 +22,9 @@ data:
   {{- if .Values.equinixMetal.projectID }}
   equinixMetalProjectID: {{ .Values.equinixMetal.projectID | toString | b64enc }}
   {{- end }}
+  {{- if .Values.aws.accessKeyID }}
+  awsAccessKeyID: {{ .Values.aws.accessKeyID | toString | b64enc }}
+  {{- end }}
+  {{- if .Values.aws.secretAccessKey }}
+  awsSecretAccessKey: {{ .Values.aws.secretAccessKey | toString | b64enc }}
+  {{- end }}
