--- a/charts/sharingio-pair/templates/deployment-cluster-api-manager.yaml
+++ b/charts/sharingio-pair/templates/deployment-cluster-api-manager.yaml
@@ -51,7 +51,7 @@ spec:
               value: {{ printf ":%v" .Values.clusterapimanager.service.port | toString | quote | default "8080" }}
             - name: APP_TARGET_NAMESPACE
               value: {{ .Values.targetNamespace | default .Release.Namespace }}
-            - name: APP_INSTANCE_SUBDOMAIN
+            - name: APP_BASE_HOST
               value: "{{ (first .Values.ingress.hosts).host }}"
             - name: APP_KUBERNETES_SECRET_NAME
               value: {{ include "sharingio-pair.fullname" . }}
