--- a/org/external-dns/external-dns.yaml
+++ b/org/external-dns/external-dns.yaml
@@ -92,6 +92,7 @@ spec:
         - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
         - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
         - --registry=txt
+        - --log-level=debug
         env:
           - name: EXTERNAL_DNS_DOMAIN_FILTER
             valueFrom:
