--- a/apps/client/Dockerfile
+++ b/apps/client/Dockerfile
@@ -1,12 +1,13 @@
 FROM clojure:openjdk-15-lein-2.9.3-slim-buster as build
 WORKDIR /app
-COPY src/sharingio /app/src/sharingio
+COPY src/client /app/src/client
 COPY resources /app/resources
 COPY test /app/test
 COPY *.clj /app/
-RUN lein uberjar
+RUN lein deps
+RUN lein ring uberjar
 
 FROM gcr.io/distroless/java:11
 WORKDIR /app
 COPY --from=build /app/target/uberjar/*.jar /app/
-ENTRYPOINT ["java", "-cp", "sharingio-standalone.jar", "clojure.main", "-m", "sharingio.web"]
+ENTRYPOINT ["java", "-jar", "client-0.1.0-standalone.jar"]
