Update chart version, role

--- a/charts/sharingio-pair/templates/role-cluster-api-manager.yaml
+++ b/charts/sharingio-pair/templates/role-cluster-api-manager.yaml
@@ -22,7 +22,7 @@ rules:
     resources:
       - packetmachinetemplates
       - packetclusters
-      - packetmachinetemplates
+      - packetmachines
     verbs:
       - create
       - get
