--- a/org/deployment/frontend-repl-ingress.yaml
+++ b/org/deployment/frontend-repl-ingress.yaml
@@ -1,3 +1,7 @@
+
+
+# #+NAME: Ingress
+
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
@@ -14,4 +18,4 @@ spec:
   tls:
   - hosts:
     - pair-dev.sharing.io
-    secretName: sharingio-pair-letsencrypt
+    secretName: pair-dev-sharingio-pair-letsencrypt
