Fix resource typo for packetmachines in role for backend

--- a/charts/sharingio-pair/templates/role-cluster-api-manager.yaml
+++ b/charts/sharingio-pair/templates/role-cluster-api-manager.yaml
@@ -31,7 +31,7 @@ rules:
   - apiGroups:
       - "infrastructure.cluster.x-k8s.io"
     resources:
-      - packetmachine
+      - packetmachines
     verbs:
       - deletecollection
   - apiGroups:
