Ensure values for HumacsRepository, KubernetesVersion. Add overrides

--- a/charts/sharingio-pair/values.yaml
+++ b/charts/sharingio-pair/values.yaml
@@ -17,7 +17,7 @@ timezone: Pacific/Auckland
 instance:
   kubernetesVersion: ""
   humacsVersion: ""
-  humacsRepository: ""
+  humacsRepository: registry.gitlab.com/humacs/humacs/ii
 
 imagePullSecrets: []
 
