--- a/charts/sharingio-pair/templates/deployment-cluster-api-manager.yaml
+++ b/charts/sharingio-pair/templates/deployment-cluster-api-manager.yaml
@@ -66,7 +66,7 @@ spec:
               value: {{ .Values.instance.humacsRepository }}
             {{- end }}
             {{- if .Values.instance.kubernetesVersion }}
-            - name: APP_KUBERNETES_VERSION
+            - name: APP_INSTANCE_KUBERNETES_VERSION
               value: {{ .Values.instance.kubernetesVersion }}
             {{- end }}
             {{- if .Values.clusterapimanager.extraEnv }}
