Rearchitect DNS and Cert management

--- a/charts/sharingio-pair/templates/role-cluster-api-manager.yaml
+++ b/charts/sharingio-pair/templates/role-cluster-api-manager.yaml
@@ -46,7 +46,7 @@ rules:
       - list
       - delete
       - deletecollection
-      - watch
+      - list
   - apiGroups:
       - "bootstrap.cluster.x-k8s.io"
     resources:
