--- a/manifests/pair.yaml
+++ b/manifests/pair.yaml
@@ -22,6 +22,13 @@ spec:
     client:
       image:
         tag: ${SHARINGIO_PAIR_TAG}
+      resources:
+        requests:
+          cpu: 50m
+          memory: 400Mi
+        limits:
+          cpu: 50m
+          memory: 400Mi
     clusterapimanager:
       image:
         tag: ${SHARINGIO_PAIR_TAG}
@@ -30,11 +37,11 @@ spec:
         minReplicas: 2
       resources:
         requests:
-          cpu: 250m
-          memory: 250Mi
+          cpu: 50m
+          memory: 25Mi
         limits:
-          cpu: 250m
-          memory: 250Mi
+          cpu: 50m
+          memory: 25Mi
     ingress:
       enabled: true
       certmanager:
