Ensure backend can create and update secrets

--- a/charts/sharingio-pair/templates/role-cluster-api-manager.yaml
+++ b/charts/sharingio-pair/templates/role-cluster-api-manager.yaml
@@ -62,6 +62,8 @@ rules:
       - secrets
     verbs:
       - get
+      - create
+      - update
   - apiGroups:
       - externaldns.k8s.io
     resources:
