--- a/manifests/pair.yaml
+++ b/manifests/pair.yaml
@@ -17,7 +17,8 @@ spec:
     instance:
       kubernetesVersion: 1.21.2
       humacsRepository: registry.gitlab.com/humacs/humacs/ii
-      humacsVersion: 2021.06.28.2240
+      humacsVersion: 2021.06.30.0438
+      nodeSize: c3.small.x86
     sessionSecret: pairpairpairpair
     githubOAuth:
       id: ${SHARINGIO_PAIR_GITHUB_OAUTH_ID}
