--- a/infra/cluster-api/cluster-packet-sharingio.yaml
+++ b/infra/cluster-api/cluster-packet-sharingio.yaml
@@ -26,6 +26,10 @@ spec:
           cloud-provider: external
     postKubeadmCommands:
     - |
+      for NAMESPACE in powerdns external-dns metallb nginx-ingress helm-operator kube-prometheus; do
+          kubectl create namespace $NAMESPACE
+      done
+    - |
       cat <<EOF >> /etc/network/interfaces
       auto lo:0
       iface lo:0 inet static
@@ -39,19 +43,13 @@ spec:
     - 'kubectl create secret generic -n kube-system packet-cloud-config --from-literal=cloud-sa.json=''{"apiKey": "{{ .apiKey }}","projectID": "7a44b778-41d2-49fa-9c92-99148516c600", "eipTag": "cluster-api-provider-packet:cluster-id:sharingio"}'''
     - kubectl taint node --all node-role.kubernetes.io/master-
     - kubectl apply -f https://github.com/packethost/packet-ccm/releases/download/v1.1.0/deployment.yaml
-    - kubectl apply -f https://github.com/packethost/csi-packet/raw/master/deploy/kubernetes/setup.yaml
-    - kubectl apply -f https://github.com/packethost/csi-packet/raw/master/deploy/kubernetes/node.yaml
-    - kubectl apply -f https://github.com/packethost/csi-packet/raw/master/deploy/kubernetes/controller.yaml
-    - kubectl apply -f https://github.com/jetstack/cert-manager/releases/download/v1.0.3/cert-manager.yaml
+    - kubectl apply -f https://github.com/jetstack/cert-manager/releases/download/v1.1.0/cert-manager.yaml
     - kubectl apply -f "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')&env.IPALLOC_RANGE=192.168.0.0/16"
-    - curl -L https://get.helm.sh/helm-v3.3.0-linux-amd64.tar.gz | tar --directory /usr/local/bin --extract -xz --strip-components 1 linux-amd64/helm
     - |
-      (
-        helm repo add nginx-ingress https://kubernetes.github.io/ingress-nginx;
-        kubectl create ns nginx-ingress;
-        helm install nginx-ingress -n nginx-ingress nginx-ingress/ingress-nginx --set controller.service.externalTrafficPolicy=Local --version 2.16.0;
-        kubectl wait -n nginx-ingress --for=condition=ready pod --selector=app.kubernetes.io/component=controller --timeout=90s
-      )
+      kubectl -n helm-operator apply \
+        -f https://github.com/sharingio/.sharing.io/raw/main/cluster-api/manifests/helm-operator-crds.yaml \
+        -f https://github.com/sharingio/.sharing.io/raw/main/cluster-api/manifests/helm-operator.yaml
+    - env KUBERNETES_CONTROLPLANE_ENDPOINT="{{ .controlPlaneEndpoint }}" envsubst < <(curl -s -L https://github.com/sharingio/.sharing.io/raw/main/cluster-api/manifests/nginx-ingress.yaml) | kubectl apply -f -
     - |
       kubectl get configmap kube-proxy -n kube-system -o yaml | sed -e "s/strictARP: false/strictARP: true/" | kubectl apply -f - -n kube-system
     - |
@@ -76,16 +74,6 @@ spec:
         kubectl create secret generic -n metallb-system memberlist --from-literal=secretkey="$(openssl rand -base64 128)";
         kubectl apply -f /root/metallb-system-config.yaml
       )
-    - helm install -n kube-system metrics-server --version 2.11.2 --set \{--logtostderr,--kubelet-preferred-address-types=InternalIP,--kubelet-insecure-tls\} stable/metrics-server
-    - |
-      (
-        set -x;
-        cd /root;
-        git clone https://github.com/humacs/humacs;
-        cd humacs;
-        kubectl create ns sharingio
-        helm install "sharingio" -n "sharingio" -f chart/humacs/values/apisnoop.yaml -f chart/humacs/values/sharingio.yaml --set options.repos=\{https://github.com/sharingio/pair\} --set options.workingFile="/home/ii/pair/org/deployment/deployment.org" --set options.timezone="Pacific/Auckland" --set options.gitName="Sharing IO" --set options.gitEmail="sharingio@ii.coop" --set options.profile="ii" chart/humacs
-      )
     - |
       (
         mkdir -p /etc/sudoers.d
@@ -106,14 +94,17 @@ spec:
     - apt-key fingerprint 0EBFCD88
     - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
     - apt-get update -y
-    - apt-get install -y ca-certificates socat jq ebtables apt-transport-https cloud-utils prips docker-ce docker-ce-cli containerd.io kubelet kubeadm kubectl
+    - |
+      TRIMMED_KUBERNETES_VERSION=$(echo v1.21.2 | sed 's/\./\./g' | sed 's/^v//')
+      RESOLVED_KUBERNETES_VERSION=$(apt-cache policy kubelet | awk -v VERSION=${TRIMMED_KUBERNETES_VERSION} '$1~ VERSION { print $1 }' | head -n1)
+    - apt-get install -y ca-certificates socat jq ebtables apt-transport-https cloud-utils prips docker-ce docker-ce-cli containerd.io kubelet=${RESOLVED_KUBERNETES_VERSION} kubeadm=${RESOLVED_KUBERNETES_VERSION} kubectl=${RESOLVED_KUBERNETES_VERSION}
     - systemctl daemon-reload
     - systemctl enable docker
     - systemctl start docker
     - chgrp users /var/run/docker.sock
     - ping -c 3 -q {{ .controlPlaneEndpoint }} && echo OK || ip addr add {{ .controlPlaneEndpoint }} dev lo
   replicas: 1
-  version: v1.19.0
+  version: v1.21.2
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
 kind: PacketMachineTemplate
@@ -190,7 +181,7 @@ spec:
         apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
         kind: PacketMachineTemplate
         name: sharingio-worker-a
-      version: v1.19.0
+      version: v1.21.2
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
 kind: PacketMachineTemplate
