--- a/infra/cluster-api/cluster-packet-template.yaml
+++ b/infra/cluster-api/cluster-packet-template.yaml
@@ -27,6 +27,10 @@ spec:
           cloud-provider: external
     postKubeadmCommands:
     - |
+        for NAMESPACE in powerdns external-dns metallb nginx-ingress helm-operator kube-prometheus; do
+            kubectl create namespace $NAMESPACE
+        done
+    - |
         cat <<EOF >> /etc/network/interfaces
         auto lo:0
         iface lo:0 inet static
@@ -40,19 +44,13 @@ spec:
     - 'kubectl create secret generic -n kube-system packet-cloud-config --from-literal=cloud-sa.json=''{"apiKey": "{{ .apiKey }}","projectID": "${PACKET_PROJECT_ID}", "eipTag": "cluster-api-provider-packet:cluster-id:${CLUSTER_NAME}"}'''
     - kubectl taint node --all node-role.kubernetes.io/master-
     - kubectl apply -f https://github.com/packethost/packet-ccm/releases/download/v1.1.0/deployment.yaml
-    - kubectl apply -f https://github.com/packethost/csi-packet/raw/master/deploy/kubernetes/setup.yaml
-    - kubectl apply -f https://github.com/packethost/csi-packet/raw/master/deploy/kubernetes/node.yaml
-    - kubectl apply -f https://github.com/packethost/csi-packet/raw/master/deploy/kubernetes/controller.yaml
-    - kubectl apply -f https://github.com/jetstack/cert-manager/releases/download/v1.0.3/cert-manager.yaml
+    - kubectl apply -f https://github.com/jetstack/cert-manager/releases/download/v1.1.0/cert-manager.yaml
     - kubectl apply -f "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')&env.IPALLOC_RANGE=192.168.0.0/16"
-    - curl -L https://get.helm.sh/helm-v3.3.0-linux-amd64.tar.gz | tar --directory /usr/local/bin --extract -xz --strip-components 1 linux-amd64/helm
     - |
-        (
-          helm repo add nginx-ingress https://kubernetes.github.io/ingress-nginx;
-          kubectl create ns nginx-ingress;
-          helm install nginx-ingress -n nginx-ingress nginx-ingress/ingress-nginx --set controller.service.externalTrafficPolicy=Local --version 2.16.0;
-          kubectl wait -n nginx-ingress --for=condition=ready pod --selector=app.kubernetes.io/component=controller --timeout=90s
-        )
+      kubectl apply \
+        -f https://github.com/sharingio/.sharing.io/blob/main/cluster-api/manifests/helm-operator-crds.yaml \
+        -f https://github.com/sharingio/.sharing.io/blob/main/cluster-api/manifests/helm-operator.yaml
+    - env KUBERNETES_CONTROLPLANE_ENDPOINT=hello envsubst < <(curl -s -L https://github.com/sharingio/.sharing.io/raw/main/cluster-api/manifests/nginx-ingress.yaml)
     - |
         kubectl get configmap kube-proxy -n kube-system -o yaml | sed -e "s/strictARP: false/strictARP: true/" | kubectl apply -f - -n kube-system
     - |
@@ -77,16 +75,6 @@ spec:
           kubectl create secret generic -n metallb-system memberlist --from-literal=secretkey="$(openssl rand -base64 128)";
           kubectl apply -f /root/metallb-system-config.yaml
         )
-    - helm install -n kube-system metrics-server --version 2.11.2 --set \{--logtostderr,--kubelet-preferred-address-types=InternalIP,--kubelet-insecure-tls\} stable/metrics-server
-    - |
-        (
-          set -x;
-          cd /root;
-          git clone https://github.com/humacs/humacs;
-          cd humacs;
-          kubectl create ns ${CLUSTER_NAME}
-          helm install "${CLUSTER_NAME}" -n "${CLUSTER_NAME}" -f chart/humacs/values/apisnoop.yaml -f chart/humacs/values/sharingio.yaml --set options.repos=\{https://github.com/sharingio/pair\} --set options.workingFile="/home/ii/pair/org/deployment/deployment.org" --set options.timezone="${HUMACS_TZ}" --set options.gitName="${HUMACS_GIT_NAME}" --set options.gitEmail="${HUMACS_GIT_EMAIL}" --set options.profile="${HUMACS_PROFILE}" chart/humacs
-        )
     - |
         (
           mkdir -p /etc/sudoers.d
@@ -107,7 +95,10 @@ spec:
     - apt-key fingerprint 0EBFCD88
     - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
     - apt-get update -y
-    - apt-get install -y ca-certificates socat jq ebtables apt-transport-https cloud-utils prips docker-ce docker-ce-cli containerd.io kubelet kubeadm kubectl
+    - |
+      TRIMMED_KUBERNETES_VERSION=$(echo ${KUBERNETES_VERSION} | sed 's/\./\\./g' | sed 's/^v//')
+      RESOLVED_KUBERNETES_VERSION=$(apt-cache policy kubelet | awk -v VERSION=$${TRIMMED_KUBERNETES_VERSION} '$1~ VERSION { print $1 }' | head -n1)
+    - apt-get install -y ca-certificates socat jq ebtables apt-transport-https cloud-utils prips docker-ce docker-ce-cli containerd.io kubelet=$${RESOLVED_KUBERNETES_VERSION} kubeadm=$${RESOLVED_KUBERNETES_VERSION} kubectl=$${RESOLVED_KUBERNETES_VERSION}
     - systemctl daemon-reload
     - systemctl enable docker
     - systemctl start docker
