--- a/org/external-dns/external-dns.yaml
+++ b/org/external-dns/external-dns.yaml
@@ -83,16 +83,18 @@ spec:
       serviceAccountName: external-dns
       containers:
       - name: external-dns
-        image: k8s.gcr.io/external-dns/external-dns:v0.7.5
+        image: k8s.gcr.io/external-dns/external-dns:v0.9.0
         args:
         - --source=crd
         - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
         - --crd-source-kind=DNSEndpoint
         - --provider=aws
+      # - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
         - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
         - --registry=txt
         - --log-level=debug
         - --aws-batch-change-size=99
+        - --managed-record-types=A,CNAME,NS
         env:
           - name: EXTERNAL_DNS_DOMAIN_FILTER
             valueFrom:
