--- a/infra/cluster-api/nginx-ingress.yaml
+++ b/infra/cluster-api/nginx-ingress.yaml
@@ -10,9 +10,11 @@ spec:
   chart:
     repository: https://kubernetes.github.io/ingress-nginx
     name: ingress-nginx
-    version: 3.30.0
+    version: 4.0.1
   values:
     controller:
+      ingressClassResource:
+        default: true
       autoscaling:
         enabled: true
         minReplicas: 3
