--- a/infra/cluster-api/cluster-template-packet.yaml
+++ b/infra/cluster-api/cluster-template-packet.yaml
@@ -34,8 +34,10 @@ spec:
           netmask 255.255.255.255
         EOF
       - systemctl restart networking
-      - 'kubectl --kubeconfig /etc/kubernetes/admin.conf create secret generic -n kube-system metal-cloud-config --from-literal=cloud-sa.json=''{"apiKey": "{{ .apiKey }}","projectID": "${PROJECT_ID}","loadbalancer":"metallb:///"}'''
-      - kubectl apply --kubeconfig /etc/kubernetes/admin.conf -f https://github.com/equinix/cloud-provider-equinix-metal/releases/download/v3.2.2/deployment.yaml
+      - mkdir -p ~/.kube/
+      - cp /etc/kubernetes/admin.conf ~/.kube/config
+      - 'kubectl create secret generic -n kube-system metal-cloud-config --from-literal=cloud-sa.json=''{"apiKey": "{{ .apiKey }}","projectID": "${PROJECT_ID}","loadbalancer":"metallb:///"}'''
+      - kubectl apply -f https://github.com/equinix/cloud-provider-equinix-metal/releases/download/v3.2.2/deployment.yaml
       - kubectl taint node --all node-role.kubernetes.io/master-
     preKubeadmCommands:
       - sed -ri '/\sswap\s/s/^#?/#/' /etc/fstab
