--- a/infra/cluster-api/external-dns.yaml
+++ b/infra/cluster-api/external-dns.yaml
@@ -85,7 +85,7 @@ spec:
       serviceAccountName: external-dns
       containers:
       - name: external-dns
-        image: k8s.gcr.io/external-dns/external-dns:v0.7.5
+        image: k8s.gcr.io/external-dns/external-dns:v0.10.0
         args:
         - --source=crd
         - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
@@ -96,6 +96,9 @@ spec:
         - --registry=txt
         - --log-level=debug
         - --aws-batch-change-size=99
+        - --managed-record-types=A
+        - --managed-record-types=CNAME
+        - --managed-record-types=NS
         env:
           - name: EXTERNAL_DNS_DOMAIN_FILTER
             valueFrom:
